syntax = "proto3";

package api.student.v1;
// 先引入 google/api/annotations.proto
import "google/api/annotations.proto";


option go_package = "student/api/student/v1;v1";
option java_multiple_files = true;
option java_package = "api.student.v1";

service Student {
	rpc CreateStudent (CreateStudentRequest) returns (CreateStudentReply);
	rpc UpdateStudent (UpdateStudentRequest) returns (UpdateStudentReply);
	rpc DeleteStudent (DeleteStudentRequest) returns (DeleteStudentReply);
	rpc GetStudent (GetStudentRequest) returns (GetStudentReply){
		option (google.api.http) = {
			get: "/student/{id}",
		};
	};
	rpc ListStudent (ListStudentRequest) returns (ListStudentReply);
}

message CreateStudentRequest {}
message CreateStudentReply {}

message UpdateStudentRequest {}
message UpdateStudentReply {}

message DeleteStudentRequest {}
message DeleteStudentReply {}


message GetStudentRequest {
	int32 id = 1;
}

message GetStudentReply {
	string name   = 1;
	int32  status = 2;
	int32  id     = 3;
}

message ListStudentRequest {}
message ListStudentReply {}